move model input data cache location to ./data

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 # Edit at https://www.toptal.com/developers/gitignore?templates=python
 
 .data_cache/
+data/.model_input_data_cache/
 
 ### Python ###
 # Byte-compiled / optimized / DLL files
